2011-10-16  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_JETMETFULL,outputNTUP_JETMETWZ,outputNTUP_JETMETEMCL in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-69

2011-10-10 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added outputNTUP_MUONFile in scripts/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-68

2011-10-10  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYLLPFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-67

2011-09-28  Junji Tojo <Junji.Tojo@cern.ch>
        * A typo corrected in outputNTUP_TOPBOOSTFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-66

2011-09-28  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_TOPBOOSTFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-65

2011-09-28  Junji Tojo <Junji.Tojo@cern.ch>
	* Add outputNTUP_SUSYSKIMFile and outputNTUP_SUSY01LEPFile in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-64

2011-09-26  David Cote  <david.cote@cern.ch>
	* Changed Reco_trf runESDtoESD() to trigger on hasOutput instead of outputESDFile
	* Tagging as PATJobTransforms-00-03-63	

2011-09-15 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added outputNTUP_TAUSMALLFile and outputNTUP_TAUMEDIUMFile
	  to scripts/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-62

2011-09-13 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added outputNTUP_SMTRILEPFile to scripts/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-61

2011-09-10 Rolf Seuster <seuster AT  cern.ch>
	* remove hack, as ESDtoESD re-reconstruction, works now with merged trf
	* add a few outputfiles DESD_ZEE, etc.
	* Tagging as PATJobTransforms-00-03-60

2011-09-03 Susumu Oda <Susumu.Oda@cern.ch>
	* Added topBS to python/DefaultInputs.py to use it for q126 test 
	  (python/ArgDicTools.py).  
	* Tagging as PATJobTransforms-00-03-59

2011-08-31  Junji Tojo <Junji.Tojo@cern.ch>