@@ -1,3 +1,7 @@
+2011-10-20 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Update DefaultInputs to use EOS instead of CASTOR
+    * Tagging as PATJobTransforms-00-03-70    
+
 2011-10-16  Junji Tojo <Junji.Tojo@cern.ch>
         * Added outputNTUP_JETMETFULL,outputNTUP_JETMETWZ,outputNTUP_JETMETEMCL in script/Reco_trf.py
         * Tagging as PATJobTransforms-00-03-69
